@@ -269,12 +269,12 @@ TIEXPORT int TICALL ticalcs_probe_calc_1(CalcHandle* handle, CalcModel* model)
 		memset(&infos, 0, sizeof(CalcInfos));		
 		TRYF(ticalcs_calc_get_version(handle, &infos));
 
-		switch(infos.hw_id)
+		switch(infos.device_type)
 		{
-		case 1: *model = CALC_TI92P; break;
-		case 3: *model = CALC_TI89;  break;
-		case 8: *model = CALC_V200;  break;
-		case 9: *model = CALC_TI89T; break;
+		case CALC_TI92P: *model = CALC_TI92P; break;
+		case CALC_TI89:  *model = CALC_TI89;  break;
+		case CALC_V200:  *model = CALC_V200;  break;
+		case CALC_TI89T: *model = CALC_TI89T; break;
 		default: break;
 		}
 	}
@@ -288,12 +288,10 @@ TIEXPORT int TICALL ticalcs_probe_calc_1(CalcHandle* handle, CalcModel* model)
 		memset(&infos, 0, sizeof(CalcInfos));
 		TRYF(ticalcs_calc_get_version(handle, &infos));
 
-		switch (infos.hw_id) 
+		switch (infos.device_type) 
 		{
-		case 0: *model = CALC_TI83P; break;
-		case 1: *model = CALC_TI83P; break;	// SE
-		case 2: *model = CALC_TI84P; break;
-		case 3: *model = CALC_TI84P; break;	// SE
+		case CALC_TI83P: *model = CALC_TI83P; break;
+		case CALC_TI84P: *model = CALC_TI84P; break;
 		default: break;
 		}
 	}
